--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -6,7 +6,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
+        <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
         <link rel="stylesheet" href="styles/global.css">
         <link rel="stylesheet" href="styles/content.css">
@@ -39,7 +39,14 @@
                                 <span>Visit Portfolio</span>
                             </a>
                             <hr>
-                            <span>Linkedin</span>
+                            <div class="icons">
+                                <span class="icon">
+                                    <img src="icons/linkedin.svg">
+                                </span>
+                                <span class="icon">
+                                    <img src="icons/github.svg">
+                                </span>
+                            </div>
                         </div>
                     </div>
                 </div>
