Added Repsonsive Design

--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -2,6 +2,10 @@
 <html>
     <head>
         <title>Luca Krüger</title>
+        <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="description" content="Fullstack Web Developer" />
+
+        <link rel="icon" type="image/x-icon" href="icons/favicon.ico">
 
         <link rel="preconnect" href="https://fonts.googleapis.com"> 
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin> 
@@ -10,13 +14,11 @@
 
         <link rel="stylesheet" href="styles/global.css">
         <link rel="stylesheet" href="styles/content.css">
-
-        <!-- Include Alpine (maybe, if needed) -->
-        <!--script src="//unpkg.com/alpinejs" defer></script-->
     </head>
     <body>
         <div class="root">
             <img class="background" src="images/kurt-cotoaga-cqbLg3lZEpk-unsplash.jpg">
+            
             <div class="panels">
                 <div class="left">
                     <div class="container">
@@ -35,21 +37,37 @@
                             <span>Explore</span>
                         </div>
                         <div class="subtitle">
-                            <a class="button">
+                            <a href="https://portfolio.luca-krueger.com" class="button">
                                 <span>Visit Portfolio</span>
                             </a>
                             <hr>
                             <div class="icons">
-                                <span class="icon">
+                                <a href="https://www.linkedin.com/in/luca-kr%C3%BCger-3bb48b23a" class="icon">
                                     <img src="icons/linkedin.svg">
-                                </span>
-                                <span class="icon">
+                                </a>
+                                <a href="https://github.com/lucakrueger" class="icon">
                                     <img src="icons/github.svg">
-                                </span>
+                                </a>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
+
+            <div class="footer">
+                <a href="https://legal.luca-krueger.com" class="link-button">
+                    <span>Legal Notice</span>
+                </a>
+                <a href="https://contact.luca-krueger.com" class="link-button">
+                    <span>Contact</span>
+                </a>
+            </div>
+
+            <div class="credits">
+                <a href="https://unsplash.com/photos/cqbLg3lZEpk?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink">Photo by Kurt Cotoaga</a>
+                <a href="https://unsplash.com/photos/cqbLg3lZEpk?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink" class="icon no-mobile">
+                    <img src="icons/arrow.svg">
+                </a>
             </div>
         </div>
     </body>
