Added more responsiveness

--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -65,9 +65,9 @@
 
             <div class="credits">
                 <a href="https://unsplash.com/photos/cqbLg3lZEpk?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink">Photo by Kurt Cotoaga</a>
-                <a href="https://unsplash.com/photos/cqbLg3lZEpk?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink" class="icon no-mobile">
+                <!--<a href="https://unsplash.com/photos/cqbLg3lZEpk?utm_source=unsplash&utm_medium=referral&utm_content=creditShareLink" class="icon no-mobile">
                     <img src="icons/arrow.svg">
-                </a>
+                </a> -->
             </div>
         </div>
     </body>
