--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -3,6 +3,7 @@
     <head>
         <title>Luca Krüger</title>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <meta name="description" content="Fullstack Web Developer" />
 
         <link rel="icon" type="image/x-icon" href="icons/favicon.ico">
