Updated Landing Page

--- a/src/pages/landing.html
+++ b/src/pages/landing.html
@@ -28,7 +28,7 @@
                             <span>Krüger</span>
                         </div>
                         <div class="subtitle">
-                            <span>Full Stack Web Developer</span>
+                            <!--<span>Full Stack Web Developer</span> -->
                         </div>
                     </div>
                 </div>
