--- a/src/pages/failed.html
+++ b/src/pages/failed.html
@@ -25,7 +25,7 @@
                 <div class="middle">
                     <div class="container">
                         <div class="subtitle">
-                            <span>We had trouble sending your request...</span>
+                            <span>We had trouble delivering your request.</span>
                         </div>
                     </div>
                 </div>
