--- a/src/pages/legal.html
+++ b/src/pages/legal.html
@@ -13,9 +13,15 @@
         <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Source+Sans+Pro:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
         <link type="text/css" rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css">
 
+        <!-- Add reCaptcha -->
+        <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+        <script src="https://cdn.jsdelivr.net/gh/lucakrueger/radishjs@master/radish.js" url="http://localhost:3000"></script>
+
         <link rel="stylesheet" href="styles/global.css">
         <link rel="stylesheet" href="styles/content.css">
         <link rel="stylesheet" href="styles/legal.css">
+
+        <script src="scripts/legal.js"></script>
     </head>
     <body>
         <div class="root">
@@ -30,8 +36,14 @@
                         <div class="subtitle">
                             <hr>
                             <span class="us">Luca Krüger</span>
-                            <span class="us">Address</span>
-                            <span class="us">PLZ</span>
+                            <span class="us">
+                                <external-value bind="address">Address</external-value>
+                            </span>
+                            <span class="us">
+                                <external-value bind="postal">Postal code</external-value>
+                            </span>
+                            <hr>
+                            <div class="g-recaptcha" data-sitekey="6Lf9wB0lAAAAAHe881KrW0QbT0S7Qbs-h0LUC_hZ" data-callback="recaptchaCallback" id="captcha" required></div>
                             <hr>
                             <span class="heading">Contact</span>
                             <span class="us">contact(at)luca.krueger.com</span>
