--- a/src/pages/success.html
+++ b/src/pages/success.html
@@ -25,7 +25,7 @@
                 <div class="middle">
                     <div class="container">
                         <div class="subtitle">
-                            <span>Your request was sent successfully!</span>
+                            <span>Your request was delivered successfully!</span>
                         </div>
                     </div>
                 </div>
